<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.noser</groupId>
	<artifactId>blog</artifactId>
	<version>0.3.8-SNAPSHOT</version>
	<packaging>jar</packaging>

	<name>Noser Blog</name>
	<description>Blog backend project for testing and educational purposes</description>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.2.2.RELEASE</version>
		<relativePath /> <!-- lookup parent from repository -->
	</parent>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<java.version>1.8</java.version>
		<keycloak.version>8.0.1</keycloak.version>
		<swagger.version>2.9.2</swagger.version>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-aop</artifactId>
		</dependency>
		<dependency>
			<groupId>org.aspectj</groupId>
			<artifactId>aspectjweaver</artifactId>
		</dependency>

		<dependency>
			<groupId>commons-fileupload</groupId>
			<artifactId>commons-fileupload</artifactId>
			<version>[1.3.3,)</version>
		</dependency>

		<dependency>
			<groupId>com.h2database</groupId>
			<artifactId>h2</artifactId>
		</dependency>

		<dependency>
			<groupId>mysql</groupId>
			<artifactId>mysql-connector-java</artifactId>
		</dependency>

		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
		</dependency>

		<dependency>
			<groupId>net.coobird</groupId>
			<artifactId>thumbnailator</artifactId>
			<version>[0.4, 0.5)</version>
		</dependency>

		<dependency>
			<groupId>com.vladsch.flexmark</groupId>
			<artifactId>flexmark-all</artifactId>
			<version>0.34.48</version>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security</artifactId>
		</dependency>

		<dependency>
			<groupId>org.keycloak</groupId>
			<artifactId>keycloak-spring-boot-starter</artifactId>
		</dependency>

		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<optional>true</optional>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-test</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>io.projectreactor</groupId>
			<artifactId>reactor-test</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.keycloak</groupId>
			<artifactId>keycloak-admin-client</artifactId>
			<version>${keycloak.version}</version>
		</dependency>

		<dependency>
			<groupId>org.jboss.resteasy</groupId>
			<artifactId>resteasy-client</artifactId>
			<version>4.5.7.Final</version>
		</dependency>
		<dependency>
			<groupId>org.jboss.resteasy</groupId>
			<artifactId>resteasy-jackson2-provider</artifactId>
			<version>3.6.1.Final</version>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-actuator</artifactId>
		</dependency>

		<dependency>
			<groupId>io.springfox</groupId>
			<artifactId>springfox-swagger2</artifactId>
			<version>${swagger.version}</version>
		</dependency>

		<dependency>
			<groupId>io.springfox</groupId>
			<artifactId>springfox-swagger-ui</artifactId>
			<version>${swagger.version}</version>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-configuration-processor</artifactId>
			<optional>true</optional>
		</dependency>

		<dependency>
			<groupId>com.hazelcast</groupId>
			<artifactId>hazelcast</artifactId>
		</dependency>
		<dependency>
			<groupId>com.hazelcast</groupId>
			<artifactId>hazelcast-spring</artifactId>
		</dependency>
	</dependencies>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.keycloak.bom</groupId>
				<artifactId>keycloak-adapter-bom</artifactId>
				<version>${keycloak.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
		</plugins>
	</build>

	<profiles>
		<profile>
			<id>docker</id>
			<activation>
				<activeByDefault>false</activeByDefault>
			</activation>
			<build>
				<plugins>

					<plugin>
						<groupId>com.google.cloud.tools</groupId>
						<artifactId>jib-maven-plugin</artifactId>
						<configuration>
							<to>
								<image>docker.io/maddob/blog_backend</image>
							</to>
							<!--
							<extraDirectories>
								<paths>${project.build.directory}/dependency</paths>
							</extraDirectories>
							-->
						</configuration>
						<executions>
							<execution>
								<phase>deploy</phase>
								<goals>
									<goal>build</goal>
								</goals>
							</execution>
						</executions>
					</plugin>

					<plugin>
						<groupId>com.google.cloud.tools</groupId>
						<artifactId>jib-maven-plugin</artifactId>
						<version>1.8.0</version>
						<configuration>
							<from>
								<image>openjdk:11-slim</image>
							</from>
							<to>
								<image>docker.io/maddob/blog_backend</image>
								<tags>
									<tag>${project.version}</tag>
									<tag>latest</tag>
								</tags>
							</to>
							<container>
								<creationTime>USE_CURRENT_TIMESTAMP</creationTime>
								<appRoot>/opt/mdw</appRoot>
								<workingDirectory>/opt/mdw</workingDirectory>
								<jvmFlags>
									<jvmFlag>-server</jvmFlag>
									<jvmFlag>-XX:InitialRAMPercentage=1.0</jvmFlag>
									<jvmFlag>-XX:MinRAMPercentage=1.0</jvmFlag>
									<jvmFlag>-XX:MaxRAMPercentage=15.0</jvmFlag>
									<jvmFlag>-XX:InitiatingHeapOccupancyPercent=45</jvmFlag>

									<jvmFlag>-Xverify:none</jvmFlag>
									<jvmFlag>-XX:TieredStopAtLevel=1</jvmFlag>

									<jvmFlag>-XX:+UseG1GC</jvmFlag>
									<jvmFlag>-XX:MaxGCPauseMillis=200</jvmFlag>
									<jvmFlag>-XX:+DisableExplicitGC</jvmFlag>
									<jvmFlag>-XX:+ScavengeBeforeFullGC</jvmFlag>
									<jvmFlag>-XX:+AlwaysPreTouch</jvmFlag>
									<jvmFlag>-XX:+UseStringDeduplication</jvmFlag>
									<jvmFlag>-XX:-PrintStringDeduplicationStatistics</jvmFlag>

									<jvmFlag>-XX:+PrintGCDetails</jvmFlag>
									<jvmFlag>-XX:+PrintGCDateStamps</jvmFlag>
									<jvmFlag>-XX:+PrintGCTimeStamps</jvmFlag>
									<jvmFlag>-XX:+UseGCLogFileRotation</jvmFlag>
									<jvmFlag>-XX:NumberOfGCLogFiles=10</jvmFlag>
									<jvmFlag>-XX:GCLogFileSize=50M</jvmFlag>
									<jvmFlag>-Xloggc:/opt/mdw/log/gc.log</jvmFlag>
								</jvmFlags>
							</container>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
</project>
